Included GMPXX libraries search in cmake scripts and added the Asm lib in IPA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
 	include(FindPackageHandleStandardArgs)
 	find_package_handle_standard_args(GMP DEFAULT_MSG GMP_INCLUDES GMP_LIBRARIES)
 	mark_as_advanced(GMP_INCLUDES GMP_LIBRARIES)
+	set(GMPXX_LIBRARIES "")
 	# copy mpir library to the output path
 	add_custom_target(MPIR_COPY ALL COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/mpir.dll ${EXECUTABLE_OUTPUT_PATH})
 else()
@@ -48,9 +49,10 @@ else()
 	endif (GMP_INCLUDES AND GMP_LIBRARIES)
 	find_path(GMP_INCLUDES NAMES gmp.h gmpxx.h PATHS $ENV{GMPDIR} ${INCLUDE_INSTALL_DIR})
 	find_library(GMP_LIBRARIES gmp gmpxx PATHS $ENV{GMPDIR} ${LIB_INSTALL_DIR})
+	find_library(GMPXX_LIBRARIES gmpxx PATHS $ENV{GMPDIR} ${LIB_INSTALL_DIR})
 	include(FindPackageHandleStandardArgs)
-	find_package_handle_standard_args(GMP DEFAULT_MSG GMP_INCLUDES GMP_LIBRARIES)
-	mark_as_advanced(GMP_INCLUDES GMP_LIBRARIES) 
+	find_package_handle_standard_args(GMP DEFAULT_MSG GMP_INCLUDES GMP_LIBRARIES GMPXX_LIBRARIES)
+	mark_as_advanced(GMP_INCLUDES GMP_LIBRARIES GMPXX_LIBRARIES)
 endif()
 
 #list compiler flags
