--- a/IPA Libraries/CMakeLists.txt
+++ b/IPA Libraries/CMakeLists.txt
@@ -6,6 +6,7 @@ option (USE_IPA_OBJECT "Use Object - IPA Library" ON)
 option (USE_IPA_PTR "Use Ptr - IPA Library" ON)
 option (USE_IPA_RANDOM "Use Random - IPA Library" ON)
 option (USE_IPA_TIME "Use Time - IPA Library" ON)
+option (USE_IPA_ASM "Use Time - IPA Assembler" ON)
 
 if (USE_IPA_IO)
 	add_subdirectory ("IO")
@@ -35,5 +36,9 @@ if (USE_IPA_TIME)
 	add_subdirectory ("Time")
 	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " Time")
 endif (USE_IPA_TIME)
+if (USE_IPA_ASM)
+	add_subdirectory ("Asm")
+	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " Asm")
+endif (USE_IPA_ASM)
 
 message(STATUS "Selected IPA libraries: ${IPA_SELECTED_DIRS}")
