--- a/Dubbel Assembler/CMakeLists.txt
+++ b/Dubbel Assembler/CMakeLists.txt
@@ -6,6 +6,6 @@ add_executable(dasm
 	${CMAKE_CURRENT_SOURCE_DIR}/Dasm.cpp
 )
 
-target_link_libraries(dasm DubbelAssembler DubbelBuilder ${GMP_LIBRARIES})
+target_link_libraries(dasm DubbelAssembler DubbelBuilder ${GMP_LIBRARIES} ${GMPXX_LIBRARIES})
 
 install(TARGETS dasm RUNTIME DESTINATION bin)
